feat: api update flexible authorization